--- a/sample/Odd.config
+++ b/sample/Odd.config
@@ -2,11 +2,11 @@
 
 host = localhost
 
-port = 3306
+port = 5000
 
-username = admin
+username = root
 
-password = secret
+password = 1234
 
  
 
@@ -14,4 +14,4 @@ password = secret
 
 address = 192.168.0.1
 
-port = 8080
+port = 1111
